# jooj

./: .ghci  .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project.freeze  default.nix  jason.cabal  jason.nix  jooj.cabal  jooj.nix  load.sh  shell.nix  stack.yaml
app/: Main.hs
src/: Jason.hs  JooJ.hs  Lib.hs
test/: FiraCode.json  Spec.hs  asap.json  bulletphp-site.json  immer-wieder.json  utils.json
test/files/: test10.json  test11.json  test12.json  test13.json  test14.json  test4.json  test5.json  test6.json  test8.json
