name:           jason
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/jason#readme>
homepage:       https://github.com/appositum/jason#readme
bug-reports:    https://github.com/appositum/jason/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      Eddie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/jason

library
  exposed-modules:
      Lib
  other-modules:
      Paths_jason
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec >= 7
    , raw-strings-qq
  default-language: Haskell2010

executable jason-exe
  main-is: Main.hs
  other-modules:
      Paths_jason
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jason
    , containers
    , megaparsec >= 7
    , raw-strings-qq
  default-language: Haskell2010

test-suite jason-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_jason
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jason
  default-language: Haskell2010
