name:           jooj
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/jooj#readme>
homepage:       https://github.com/appositum/jooj#readme
bug-reports:    https://github.com/appositum/jooj/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      Eddie
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/jooj

library
  exposed-modules:
      JooJ
  other-modules:
      Paths_jooj
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , megaparsec >= 7
    , scientific
  default-language: Haskell2010

executable jooj-exe
  main-is: Main.hs
  other-modules:
      Paths_jooj
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jooj
  default-language: Haskell2010

test-suite jooj-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_jooj
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jooj
    , directory
    , hspec
    , megaparsec >= 7
    , raw-strings-qq
  default-language: Haskell2010
