cabal-version:  2.4
name:           jooj
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/jooj#readme>
homepage:       https://github.com/joooooooooooooooooooooooooooooooooooooj/jooj#readme
bug-reports:    https://github.com/joooooooooooooooooooooooooooooooooooooj/jooj/issues
author:         appositum
maintainer:     appositum@protonmail.com
copyright:      appositum
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/joooooooooooooooooooooooooooooooooooooj/jooj

library
  exposed-modules:
      JooJ
  other-modules:
      Paths_jooj
  hs-source-dirs:
      src
  build-depends:
      base >=4.14.1.0 && <5
    , containers
    , megaparsec
    , scientific
  default-language: Haskell2010

test-suite jooj-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_jooj
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.14.1.0 && <5
    , jooj
    , directory
    , hspec
    , megaparsec
    , QuickCheck
    , quickcheck-instances
    , raw-strings-qq
    , scientific
  default-language: Haskell2010
